# snapurl

./: .env  DEPLOYMENT.md  README.md  main.py  pyproject.toml  render.yaml
app/: database.py  dependencies.py  utils.py
app/api/routes/: url.py  user.py
app/core/: jwt.py
app/models/: analytics.py  qrcode.py  url.py  user.py
app/schemas/: url.py
app/services/: url.py  user.py
backend/: .gitignore  main.py  pyproject.toml  qr_test.py  test_script.py
backend/app/: config.py  database.py  dependencies.py  limiter.py  utils.py
backend/app/api/routes/: qrcode.py  url.py  user.py
backend/app/core/: jwt.py  security.py
backend/app/models/: __init__.py  analytics.py  url.py  user.py
backend/app/schemas/: analytics.py  url.py  user.py
backend/app/services/: url.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 71ca4c4cf656_initial_migration.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_redirect.py  test_urls.py
frontend/: .env  .env.production  index.html  package-lock.json  package.json
frontend/components/: AuthPage.jsx  CallToAction.jsx  Dashboard.jsx  Features.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  NotFoundPage.jsx  Pricing.jsx  Roadmap.jsx
frontend/src/: App.jsx
frontend/src/components/: Toast.jsx
frontend/src/lib/: api.js
