[project]
name = "snapurl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
    "greenlet>=3.5.2",
    "scalar-fastapi>=1.8.2",
    "alembic>=1.18.4",
    "psycopg2>=2.9.12",
    "psycopg>=3.3.4",
    "fastapi-mail>=1.6.5",
    "slowapi>=0.1.9",
    "qrcode[pil]>=8.2",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
